Javalin 7 (#151)
* Javalin 7

* Fix tests

* Rydd opp i gradle dependencies og tester

* Java 25

* fix